# pos5_unit

./: .gitignore  .hgignore  README.md
.hg/: dirstate  last-message.txt  undo.backup.dirstate
.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
.hg/store/data/: ~2ehgignore.i
.hg/store/data/00__template/: meson.build.i  meson__options.txt.i
.hg/store/data/00__template/include/: asdf.h.i
.hg/store/data/00__template/src/: asdf.cpp.i  main.cpp.i
.hg/store/data/00__template/test/: test.cpp.i
.hg/store/data/01__gcd/: meson.build.i
.hg/store/data/01__gcd/include/: gcd.h.i
.hg/store/data/01__gcd/src/: gcd.cpp.i  gcd.h.i  main.cpp.i
.hg/store/data/02__prime__factorization/: meson.build.i
.hg/store/data/02__prime__factorization/include/: _c_l_i11.hpp.i  primes.h.i
.hg/store/data/02__prime__factorization/src/: main.cpp.i  primes.cpp.i
.hg/store/data/02__prime__factorization/test/: primes__test.cpp.i
.hg/store/data/03__sorting/: meson.build.i
.hg/store/data/03__sorting/include/: _c_l_i11.hpp.i  sorting.h.i
.hg/store/data/03__sorting/src/: main.cpp.i  sorting.cpp.i
.hg/store/data/03__sorting/test/: test.cpp.i
.hg/store/data/04__numbercheck/: meson.build.i  meson__options.txt.i
.hg/store/data/04__numbercheck/include/: asdf.h.i  numbercheck.h.i
.hg/store/data/04__numbercheck/src/: asdf.cpp.i  main.cpp.i
.hg/store/data/04__numbercheck/test/: test.cpp.i
.hg/store/data/05__calc__awards/: meson.build.i  meson__options.txt.i
.hg/store/data/05__calc__awards/include/: calc__awards.h.i  csv__utilities.h.i  file__utilities.h.i  string__utilities.h.i
.hg/store/data/05__calc__awards/src/: calc__awards.cpp.i  csv__utilities.cpp.i  file__utilities.cpp.i  main.cpp.i  string__utilities.cpp.i
.hg/store/data/06__phone__dict/: meson.build.i  meson__options.txt.i
.hg/store/data/06__phone__dict/include/: asdf.h.i  phone__dict.h.i
.hg/store/data/06__phone__dict/src/: asdf.cpp.i  main.cpp.i
.hg/wcache/: manifestfulltextcache
00_template/: meson.build
00_template/include/: asdf.h
00_template/src/: asdf.cpp  main.cpp
00_template/test/: test.cpp
01_gcd/: meson.build
01_gcd/include/: gcd.h
01_gcd/src/: gcd.cpp  main.cpp
02_prime_factorization/: meson.build
02_prime_factorization/include/: primes.h
02_prime_factorization/src/: main.cpp  primes.cpp
02_prime_factorization/test/: primes_test.cpp
03_sorting/: meson.build
03_sorting/include/: CLI11.hpp  sorting.h
03_sorting/src/: main.cpp  sorting.cpp
03_sorting/test/: test.cpp
04_numbercheck/: meson.build
04_numbercheck/include/: numbercheck.h
04_numbercheck/src/: main.cpp
04_numbercheck/test/: test.cpp
05_calc_awards/: meson.build  meson_options.txt
05_calc_awards/include/: calc_awards.h  csv_utilities.h  file_utilities.h  string_utilities.h
05_calc_awards/src/: calc_awards.cpp  csv_utilities.cpp  file_utilities.cpp  main.cpp  string_utilities.cpp
06_phone_dict/: meson_options.txt
06_phone_dict/include/: phone_dict.h
06_phone_dict/src/: main.cpp
07_phone_dict2/: meson.build
07_phone_dict2/include/: Dictionary.h  phone_dict.h  sll.h
07_phone_dict2/src/: Dictionary.cpp  main.cpp  sll.cpp
07_phone_dict2/test/: test.cpp
08_stack/: meson.build  meson_options.txt
08_stack/src/: main.cpp
08_stack/stack/: meson.build
08_stack/stack/include/: stack.h
08_stack/stack/src/: stack.cpp
09_protocalc/: meson.build  meson_options.txt
09_protocalc/repl/: meson.build
09_protocalc/repl/include/: repl.h
09_protocalc/repl/src/: repl.cpp
09_protocalc/src/: main.cpp
09_protocalc/stack/: meson.build
09_protocalc/stack/include/: stack.h
09_protocalc/stack/src/: stack.cpp
09_protocalc/stack/tests/: test.cpp
10_calc/: meson.build
10_calc/pystring/: meson.build
10_calc/repl/: meson.build
10_calc/repl/include/: repl.h
10_calc/repl/src/: repl.cpp
10_calc/src/: main.cpp
