option('resources',
       type:'string',
       value: '/home/ida/Documents/5_Klasse/POS/resources',
       description: 'all resources')

option('doctest',
       type:'string',
       value: '/home/ida/Documents/5_Klasse/POS/resources/doctest',
       description: 'doctest')

option('magic_enum',
       type:'string',
       value: '/home/ida/Documents/5_Klasse/POS/resources/magic_enum',
       description: 'magic_enum')
